--- a/Ana Sayfa.css
+++ b/Ana Sayfa.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;1,700&display=swap');
 .container1{
     margin: 15px;
     margin-top: auto;
@@ -12,7 +13,7 @@
     border-color: red;
 }
 .container2{
-    background-image: url(tesla-kimdir-2.jpg);
+    background-image: url(tesla.jpg);
     background-repeat: no-repeat;
     margin: 60px;
     background-color: black;
@@ -23,7 +24,6 @@
     border-radius: 6px;
     background-position: 60;
     background-size: 400px 300px;
-    
 }
 .container2 h1{
     margin-left: 500px;
@@ -72,11 +72,12 @@
 
 body{
 background-image: url(f.jpg);
+font-family: 'Poppins', sans-serif;
 
 }
 /*navbar*/
 header{
-    height: 100px;
+    height: 60px;
     border-bottom: 2px solid darkblue;
 }
 /*Header start*/
@@ -158,4 +159,8 @@ nav .menu .menu-button:hover {
     width: 100%;
     height: 100%;
     background-size: 100% 100%;
+}
+#title1{
+    text-decoration: none;
+    color: red;
 }
