--- a/Ana Sayfa.css
+++ b/Ana Sayfa.css
@@ -79,6 +79,9 @@ font-family: 'Poppins', sans-serif;
 header{
     height: 60px;
     border-bottom: 2px solid darkblue;
+    margin-right: 10px;
+    margin-left: 10px;
+    
 }
 /*Header start*/
 header nav{
@@ -145,6 +148,7 @@ nav .menu .menu-button {
     /*butonun dikdörtgen olan kenarlarına kavis verir*/
     transition: color .25s ease;
     /*margin-left: 10px;*/
+    margin-right: 10px;
 }
 nav .menu .menu-button:hover {
     background-color: darkblue;
@@ -185,11 +189,12 @@ nav .menu .menu-button:hover {
     color: white;
     display: flex;
     justify-content: space-between;
-    margin-right: 20px;
-    margin-left:10px ;
     background-color: black;
     padding-bottom: 25px;
     padding-top: 25px;
-    align-items: center;
-    
+}
+
+.liste li{
+    margin-right: 10px;
+    margin-left: -20px;
 }
