--- a/iletişim.css
+++ b/iletişim.css
@@ -5,7 +5,7 @@ body{
 
 /*navbar*/
 header{
-    height: 79px;
+    height: 55px;
     border-bottom: 2px solid darkblue;
 }
 /*Header start*/
@@ -15,6 +15,7 @@ header nav{
     /*birbirinden olabildiğince uzaklaştır*/
     align-items: center;
     /* dikeyde aynı hizada*/
+    margin-top: -5px;
     
 }
 header nav .Home a {
@@ -67,6 +68,7 @@ nav .menu{
     transition: color .25s ease;
     column-gap: 48px;
     margin: 1px;
+    margin-right: 7px;
 }
 nav .menu .menu-button {
     color: aquamarine;
@@ -80,7 +82,6 @@ nav .menu .menu-button {
 nav .menu .menu-button:hover {
     background-color: darkblue;
     color: white;
-   /*butonun dikdörtgen olan kenarlarına kavis verir*/
 }
 .menu ul{
     column-gap: 20px;
@@ -94,7 +95,7 @@ nav .menu .menu-button:hover {
     background-position: center;
     margin-left: 350px;
     margin-right: 150px;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     height: auto;
 
 }
