--- a/İstek.css
+++ b/İstek.css
@@ -33,12 +33,12 @@ a{
 }
 
 header{
-    height: 50px;
+    height: 60px;
     border-bottom: 2px solid darkblue;
 }
 /*navbar*/
 header{
-    height: 60px;
+    height: 64px;
     border-bottom: 2px solid darkblue;
 }
 /*Header start*/
@@ -123,22 +123,28 @@ nav .menu .menu-button:hover {
 .paragraf{
     background-color:rgba(255, 255, 255, 0);
     color: rgb(255, 255, 255);
-    margin-left: 150px;
-    margin-right: 150px;
-    height: auto;
+    margin-left: 600px;
+    margin-right: 250px;
     border: solid;
     border-color: white;
     border-radius: 20px;
+    width: 150px;
+    height: 70px;
+    display: flex;
+ 
 
 }
 
 .paragraf p{
     margin: 20px;
+    padding-left: 17px;
+    margin-top:20px;
   
 }
 
 .paragraf a{
     text-decoration: none;
+   
 }
 
 .paragraf a:hover{
